appId: com.xqfitness.app
---
- launchApp
- tapOn:
    id: create-routine-button
- tapOn:
    id: routine-name-input
- inputText: Upper lower
- tapOn:
    id: routine-description-input
- inputText: This is a workout split for 2 days rotation of upper and lower
- hideKeyboard
- tapOn:
    text: Create Routine
    index: 1
- tapOn: OK
- tapOn: Upper lower This is a workout split for 2 days rotation of upper and lower ● Active
- assertVisible: Routine Details
- tapOn: Add First Day
- tapOn:
    id: day-number-input

- inputText: '1'
- tapOn:
    id: day-name-input
- inputText: Upper 1
- hideKeyboard
- scrollUntilVisible:
    element: Quadriceps
- tapOn:
    id: sets-input-7
- inputText: '11'
- tapOn: Quadriceps
- hideKeyboard
- scrollUntilVisible:
    element: Calves
- tapOn:
    id: sets-input-10
- scroll
- inputText: '3'
- tapOn:
    text: Calves
- tapOn: Create workout Day
- tapOn: OK
- tapOn: 'Day 1: Upper 1 Edit Delete Muscle Groups: Quadriceps 11 sets Calves 3 sets'
- tapOn: My Routines, back
- tapOn: Delete routine Upper lower
- tapOn: Delete
- tapOn: OK
- assertVisible: No routines found
- assertVisible: Tap the + button to create your first routine
